--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap"
       rel="stylesheet"
     />
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.1.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link href="plugins/aos/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="plugins/fullPage.js-msater/fullpage.min.css" />
+
     <title>ReGeneration</title>
   </head>
   <body class="scroll-y-none">
