--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/crown_logo_white.png" id="favicon" />
+    <link rel="shortcut icon" href="assets/crown_logo_white.webp" id="favicon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap"
       rel="stylesheet"
@@ -26,24 +26,9 @@
     <title>ReGeneration</title>
   </head>
   <body class="scroll-y-none">
-    <!-- <nav class="navbar navbar-dark p-sticky">
-      <div class="" id="span_icon">
-        <a href="#">
-          <img src="assets/icon-logo-azul-claro.png" alt="logo floating" class="img-responsive">
-        </a>
-      </div>
-      <div class="fw-900">ReGeneration</div>
-
-      <ul class="d-flex">
-        <li><a href="#section_hero">ReGeneration</a></li>
-        <li><a href="#section_we_are">NOT WE'ARE</a></li>
-        <li><a href="#section_carbon">Carbon NATURAL</a></li>
-      </ul>
-    </nav> -->
-
     <span class="d-none" id="span_icon">
       <a href="#">
-        <img src="assets/crown_logo.png" alt="logo floating" class="" />
+        <img src="assets/crown_logo.webp" alt="logo floating" class="" />
       </a>
     </span>
 
@@ -53,7 +38,7 @@
       <section class="h-100 p-0" id="section_hero">
         <div class="h-100 w-100 bg-dark hero" id="intro_logo">
           <img
-            src="assets/crown_logo_white.png"
+            src="assets/crown_logo_white.webp"
             class="img-sm"
             alt="logo RE"
             id="logo_intro"
@@ -61,14 +46,14 @@
         </div>
         <div class="p-relative d-flex justify-content-center" id="hero">
           <img
-            src="assets/main-logo.png"
+            src="assets/main-logo.webp"
             alt="main-logo-royal"
             class="img-hero"
             id="img_hero_1"
           />
-          <img src="assets/arroba-clara.png" alt="arroba" class="img-sm" />
+          <img src="assets/arroba-clara.webp" alt="arroba" class="img-sm" />
           <img
-            src="assets/logotipo.png"
+            src="assets/logotipo.webp"
             alt="logotipo-molly-burguers"
             class="img-hero"
             id="img_hero_2"
@@ -94,7 +79,7 @@
             data-aos-anchor-placement="center-bottom"
           >
             <img
-              src="assets/logo-complete.png"
+              src="assets/logo-complete.webp"
               alt="logo-regeneration"
               class="img-75"
             />
@@ -147,7 +132,7 @@
             </p>
             <a href="https://subscribepage.io/jointheregeneration" target="_blank">
                <img
-                 src="assets/join-us.PNG"
+                 src="assets/join-us.webp"
                  alt="img join us"
                  class="img-75"
                  data-aos="fade-up"
@@ -221,7 +206,7 @@
             CARBON NATURAL
           </h1>
           <img
-            src="assets/molly-burgers.png"
+            src="assets/molly-burgers.webp"
             alt="logo molly burguers"
             class="img-75 py-1"
             data-aos="fade-up"
@@ -258,7 +243,7 @@
             data-aos-anchor-placement="center-bottom"
           >
             <img
-              src="assets/1-person.png"
+              src="assets/1-person.webp"
               alt="img cowboys family"
               class="img-responsive"
             />
@@ -558,7 +543,7 @@
       <section class="text-light" id="section_partners">
         <div class="">
           <img
-            src="assets/logo-complete.png"
+            src="assets/logo-complete.webp"
             alt="logo-regeneration"
             class="img-75"
             data-aos="fade-up"
@@ -584,7 +569,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-darigold.png"
+                src="assets/partner-darigold.webp"
                 alt="logo partner darigold"
                 class="img-responsive p-1"
               />
@@ -598,7 +583,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-CMIorchards.png"
+                src="assets/partner-CMIorchards.webp"
                 alt="logo partner CMIorchards"
                 class="img-responsive p-1"
               />
@@ -612,7 +597,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-macDonaldMeat.png"
+                src="assets/partner-macDonaldMeat.webp"
                 alt="logo partner macDonaldMeat"
                 class="img-responsive p-1"
               />
@@ -626,7 +611,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-UA.png"
+                src="assets/partner-UA.webp"
                 alt="logo partner UA"
                 class="img-responsive p-1"
               />
@@ -640,7 +625,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-BEEF.png"
+                src="assets/partner-BEEF.webp"
                 alt="logo partner BEEF"
                 class="img-responsive p-1"
               />
@@ -654,7 +639,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-DAIRY.png"
+                src="assets/partner-DAIRY.webp"
                 alt="logo partner DAIRY"
                 class="img-responsive p-1"
               />
@@ -668,7 +653,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-honey.png"
+                src="assets/partner-honey.webp"
                 alt="logo partner HONEY"
                 class="img-responsive p-1"
               />
@@ -682,7 +667,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/partner-nurst.png"
+                src="assets/partner-nurst.webp"
                 alt="logo partner nurts"
                 class="img-responsive p-1"
               />
@@ -794,7 +779,7 @@
             Together, we can change the world.
           </p>
           <img
-            src="assets/main-logo.png"
+            src="assets/main-logo.webp"
             alt="logo royal"
             class="img-3 border-circle border"
             data-aos="fade-up"
@@ -826,7 +811,7 @@
         </div>
       </section>
       <footer class="d-flex text-light">
-         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img decoding="async" src="assets/logo_dpn.png" style="width:50px"></a></span>
+         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img decoding="async" src="assets/logo_dpn.webp" style="width:50px"></a></span>
       </footer>
     </div>
 
