--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link href="plugins/aos/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="plugins/fullPage.js-msater/fullpage.min.css" />
-
+    <meta name="description" content="Descubre Royal Family Farming, una comunidad dedicada a la agricultura sostenible y el cultivo responsable.">
     <title>ReGeneration</title>
   </head>
   <body class="scroll-y-none">
@@ -808,7 +808,7 @@
         </div>
       </section>
       <footer class="d-flex text-light">
-         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img decoding="async" src="assets/logo_dpn.webp" style="width:50px"></a></span>
+         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img decoding="async" src="assets/logo_dpn.webp" style="width:50px" alt="logo"></a></span>
       </footer>
     </div>
 
