--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -147,7 +148,7 @@
               data-aos-anchor-placement="center-bottom"
             >
               <img
-                src="assets/Austin_kids.jpg"
+                src="assets/Austin_kids.webp"
                 alt="img cowboys family"
                 class="img-responsive"
               />
@@ -322,7 +323,6 @@
              seeds and give nutrients back into the soil and restarts the cycle.
            </p>
          </div>
-
          <div class="d-flex align-items-center element_parallax">
            <img
              src="assets/hamburgers/Hamburger-6.webp"
@@ -358,7 +358,7 @@
             data-aos-anchor-placement="center-bottom"
           >
             <img
-              src="assets/steer.jpg"
+              src="assets/steer.webp"
               alt="img cow steer"
               class="img-responsive"
             />
@@ -466,6 +466,7 @@
               data-aos-easing="ease-in-out-back"
               data-aos-anchor-placement="center-bottom"
             >
+            </video>
           </div>
         </div>
       </section>
@@ -497,7 +498,7 @@
             data-aos-anchor-placement="center-bottom"
           >
             <img
-              src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.jpg"
+              src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.webp"
               alt="img arena city"
               class="img-responsive"
             />
@@ -722,7 +723,7 @@
             data-aos-anchor-placement="center-bottom"
           >
             <img
-              src="assets/austin molly door.jpg"
+              src="assets/austin molly door.webp"
               alt="img austin molly hourse"
               class="img-responsive"
             />
